# codeXNotice

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-06-14-codex-notice-phase-1.md  2026-06-14-codex-notice-phase-2.md  2026-06-14-codex-notice-phase-3.md  2026-06-14-codex-notice-phase-4.md  2026-06-14-codex-notice-phase-5.md  2026-06-14-codex-notice-phase-6.md  2026-06-14-codex-notice-phase-7.md  2026-06-14-codex-notice-phase-8.md
docs/superpowers/specs/: 2026-06-14-codex-notice-design.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_commands.rs  lib.rs  main.rs  processor.rs  rules.rs  runtime.rs  scanner.rs  scheduler.rs
src-tauri/src/detection/: codex_sqlite.rs  mod.rs
src-tauri/src/domain/: decision.rs  mod.rs  rule.rs  task.rs
src-tauri/src/notifications/: local.rs
src-tauri/src/storage/: error.rs  events.rs  mod.rs  rules.rs  schema.rs
