[package]
name = "codex-notice"
version = "0.1.0"
description = "Codex task completion notifications"
authors = ["CodeX Notice contributors"]
edition = "2021"

[lib]
name = "codex_notice"
path = "src/lib.rs"

[[bin]]
name = "codex-notice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2", features = [] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
